# Programming-Challenge_Ambient

./: @PaxHeader  AmbientAPI.py  LICENSE  README.md  README1.md  ambient_main.py  ambient_monitor_simulator_pkg-0.1.2-py3-none-any.whl  demo.py
ambient-monitor-simulator-pkg-0.1.2/: PKG-INFO  setup.cfg
ambient-monitor-simulator-pkg-0.1.2/src/ambient_monitor/: __init__.py  ambient_monitor.py  com_interface.py
