[metadata]
name = ambient-monitor-simulator-pkg
version = 0.1.2
author = Konke Radlow
author_email = konke.radlow@nanotempertech.com
url = https://bitbucket.org/konke/ambiencesensorsim/src/main/
description = Simulator for an ambient monitor with a serial interface
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7
install_requires = 
	attrs

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

